# krew-wasm-plugin-sdk-rust

./: Cargo.toml  Makefile  README.md  crates.js  search-index.js  settings.html  source-files.js
chrono/: all.html  enum.RoundingError.html  index.html  struct.DateTime.html
error_chain/: all.html  index.html  macro.bail.html  macro.ensure.html  macro.error_chain.html  macro.quick_main.html  macro.stringify_internal.html  macro.write_internal.html  struct.Backtrace.html  struct.DisplayChain.html  struct.Iter.html  trait.ChainedError.html  trait.ExitCode.html
id_arena/: all.html  index.html  struct.Arena.html  struct.DefaultArenaBehavior.html  struct.Id.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  trait.ArenaBehavior.html
k8s_openapi/: all.html  enum.CreateResponse.html  enum.DeleteResponse.html  enum.GetAPIVersionsResponse.html  enum.GetAdmissionregistrationAPIGroupResponse.html  enum.GetAdmissionregistrationV1APIResourcesResponse.html  enum.GetApiextensionsAPIGroupResponse.html  enum.GetApiextensionsV1APIResourcesResponse.html  enum.GetApiregistrationAPIGroupResponse.html  enum.GetApiregistrationV1APIResourcesResponse.html  enum.GetAppsAPIGroupResponse.html  enum.GetAppsV1APIResourcesResponse.html  enum.GetAuthenticationAPIGroupResponse.html  enum.GetAuthenticationV1APIResourcesResponse.html  enum.GetAuthorizationAPIGroupResponse.html  enum.GetAuthorizationV1APIResourcesResponse.html  enum.GetAutoscalingAPIGroupResponse.html  enum.GetAutoscalingV1APIResourcesResponse.html  enum.GetAutoscalingV2APIResourcesResponse.html  (+157 more)
kube_conf/: all.html  (+2 more)
(+5369 files in other folders)
