[package]
name = "krew-wasm-plugin-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
kube-conf = "0.2.0"
thiserror = "1.0.30"
tracing = "0.1.34"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }
k8s-openapi = "0.14.0"

[dev-dependencies]
k8s-openapi = { version = "0.14.0", default-features = false, features = ["api", "v1_23"] }

[build-dependencies]
wasi-outbound-http-defs = { git = "https://github.com/flavio/wasi-experimental-toolkit", rev = "7321ff5a3735e4c9dd368c0abce733b1fce6fcaa" }
